# ai-avatar-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  config.py  pyproject.toml  requirements.txt
agent/: llm.py  pipeline.py  tools.py
avatar/: generate.py
docs/: completion-status_2026-04-01_1720.md  plan-main.md  task.md
mcp_servers/: cache_utils.py
mcp_servers/abr_group/: README.md  server.py
mcp_servers/chocolife/: README.md  server.py
mcp_servers/twogis/: README.md  server.py
tests/: smoke_agent.py  smoke_mcp.py
voice/: clone.py  tts.py
